fixed issue for info where content would spill over

--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -142,8 +142,13 @@ a:hover {
 
 
 /*
-    ================================== SKILLS ================================== 
+    ================================== INFO ================================== 
 */
+.info {
+    overflow-y: auto;
+}
+
+
 #skills {
     margin-top: 15%;
 }
